Fixed title size on small screen

--- a/site-assets/css/thos-light.css
+++ b/site-assets/css/thos-light.css
@@ -242,6 +242,13 @@ a:hover, a:focus {
     color: var(--highlight-color);
 }
 
+.index-panel-item-date {
+    display: block;
+    text-align: left;
+    margin-top: -.5rem;
+    margin-bottom: 1rem;
+}
+
 .pagination-panel {
     margin-top: 2rem;
     padding: 0;
@@ -266,12 +273,6 @@ a:hover, a:focus {
     margin-bottom: -1px;
 }
 
-.pagination-panel-item-date {
-    display: block;
-    text-align: left;
-    margin-top: -.5rem;
-    margin-bottom: 1rem;
-}
 
 /* code */
 
@@ -367,11 +368,18 @@ pre code {
         margin-left: auto;
         margin-right: auto;
         padding: 0;
+
     }
     .index-panel-item {
         height: auto;
         margin-top: 0;
         margin-bottom: 1rem;
         width: 100%;
+    }
+    .index-panel-item a {
+        line-height: 2rem;
+    }
+    .index-panel-date {
+        margin-top: -0.25;
     }
 }
